# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Script cics-enum enumerates CICS transaction IDs, mapping to screens in
  TN3270 services. [Soldier of Fortran]

o [NSE] Script cics-user-enum brute-forces usernames for CICS users on TN3270
  services. [Soldier of Fortran]

o [NSE] Script tso-enum enumerates usernames for TN3270 Telnet services, and
  tso-brute brute-forces passwords for the same services. [Soldier of Fortran]

o [NSE] Script vtam-enum brute-forces VTAM application IDs for TN3270 services.
  [Soldier of Fortran]

o [NSE] Script tn3270-screen shows the login screen from mainframe TN3270
  Telnet services, including any hidden fields. The script is accompanied by
  the new tn3270 library. [Soldier of Fortran]

o [NSE] Script nje-pass-brute brute-forces the password to a NJE node, given a
  valid RHOST and OHOST. Helpfully, nje-node-brute can now brute force both of
  those values. [Soldier of Fortran]

o [NSE][GH#557] Script ssl-cert-intaddr will search for private IP addresses in
  TLS certificate fields and extensions. [Steve Benson]

o [GH#316] Added scan resume from Nmap's XML output. Now you can --resume a
  canceled scan from all 3 major output formats: -oN, -oG, and -oX.
  [Tudor Emil Coman]

o [Ndiff][GH#591] Fix a bug where hosts with the same IP but different
  hostnames were shown as changing hostnames between scans. Made sort stable
  with regard to hostnames. [Daniel Miller]

o [NSE][GH#533] Removed ssl-google-cert-catalog, since Google shut off that
  service at some point. Reported by Brian Morin.

o [NSE][GH#540] Add tls.servername script-arg for forcing a name to be used for
  TLS Server Name Indication extension. The argument overrides the default use
  of the host's targetname. [Bertrand Bonnefoy-Claudet]

o [NSE] Script fingerprint-strings will print the ASCII strings it finds in the
  service fingerprints that Nmap shows for unidentified services. [Daniel Miller]

o [GH#505] Updated Russian translation of Zenmap by Alexander Kozlov.
